tests/machine/x/cpp/group_by_multi_join_sort.error
line 53: ../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:53:12: error: ‘g’ was not declared in this scope
   53 |   decltype(g.key.c_custkey) c_custkey;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:53:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:54:12: error: ‘g’ was not declared in this scope
   54 |   decltype(g.key.c_name) c_name;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:54:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:56:12: error: ‘g’ was not declared in this scope
   56 |   decltype(g.key.c_acctbal) c_acctbal;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:56:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:57:12: error: ‘g’ was not declared in this scope
   57 |   decltype(g.key.n_name) n_name;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:57:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:58:12: error: ‘g’ was not declared in this scope
   58 |   decltype(g.key.c_address) c_address;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:58:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:59:12: error: ‘g’ was not declared in this scope
   59 |   decltype(g.key.c_phone) c_phone;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:59:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:60:12: error: ‘g’ was not declared in this scope
   60 |   decltype(g.key.c_comment) c_comment;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:60:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:102:27: error: no match for ‘operator==’ (operand types are ‘__struct5’ and ‘__struct5’)
  102 |               if (__g.key == __key) {
      |                   ~~~~~~~ ^~ ~~~~~
      |                       |      |
      |                       |      __struct5
      |                       __struct5
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:116:39: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
  116 |     std::vector<std::pair<decltype((-([&](auto v) {
      |                                       ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:119:31: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
  119 |                           })(([&]() {
      |                               ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:134:27: error: template argument 1 is invalid
  134 |                           __struct8>>
      |                           ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:134:36: error: template argument 1 is invalid
  134 |                           __struct8>>
      |                                    ^~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:134:36: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:137:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  137 |       __items.push_back(
      |               ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:141:45: error: ‘std::declval<__struct4>’ is not a class member
  141 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:144:51: error: ‘std::declval<__struct4>’ is not a class member
  144 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:141:45: error: ‘std::declval<__struct4>’ is not a class member
  141 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:144:51: error: ‘std::declval<__struct4>’ is not a class member
  144 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:145:65: error: template argument 1 is invalid
  145 |                                                  .l_discount))))>
      |                                                                 ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:145:65: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:148:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  148 |                    __items.push_back(
      |                            ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:138:78:   required from here
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:138:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  138 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0); })(
      |                                                    ~~^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:138:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  138 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0); })(
      |                                                               ~~^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:158:45: error: ‘std::declval<__struct4>’ is not a class member
  158 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:161:51: error: ‘std::declval<__struct4>’ is not a class member
  161 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:158:45: error: ‘std::declval<__struct4>’ is not a class member
  158 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:161:51: error: ‘std::declval<__struct4>’ is not a class member
  161 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:162:65: error: template argument 1 is invalid
  162 |                                                  .l_discount))))>
      |                                                                 ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:162:65: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:165:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  165 |                    __items.push_back(
      |                            ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:3)> [with auto:3 = int]’:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:156:18:   required from here
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:155:43: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  155 |                  return std::accumulate(v.begin(), v.end(), 0);
      |                                         ~~^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:155:54: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  155 |                  return std::accumulate(v.begin(), v.end(), 0);
      |                                                    ~~^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:173:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  173 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:173:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  173 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:176:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  176 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from ../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:176:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  176 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~

 52 | struct __struct8 {
 53 |   decltype(g.key.c_custkey) c_custkey;
 54 |   decltype(g.key.c_name) c_name;
